# xeqer

./: CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
src/xeqer/: __init__.py  ast_reader.py  certificate.py  cli.py  decomposer.py  obligations.py  proof_rules.py  solver.py  structures.py
tests/: test_ast_reader.py  test_certificate.py  test_cli.py  test_decomposer.py  test_proof_rules.py  test_solver.py
tests/fixtures/: divide.py  divide.speqr.json
